2008-02-01  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (nma_menu_add_separator_item): take a GtkWidget instead of a
			GtkMenuShell
		- (nma_menu_add_devices): don't add extra wireless menu items here, but
			return # of wireless devices
		- (nma_menu_add_vpn_submenu, nma_menu_add_vpn_submenu): pass a GtkWidget
			to nma_menu_add_separator_item()
		- (nma_menu_show_cb): add extra wireless items after the VPN menu
		- (nma_context_menu_create): pass a GtkWidget to
			nma_menu_add_separator_item(); put a separator between the
			"Enable Wireless" item and the "Connection Information" item

2008-01-28  Dan Williams  <dcbw@redhat.com>

	* po/POTFILES.in
		- Add new translatables

	* src/connection-editor/Makefile.am
		- Add new pae sources and glade files

	* src/connection-editor/page-wired.c
	  src/connection-editor/page-wired.h
	  src/connection-editor/ce-page-wired.glade
		- Split wired bits out

	* src/connection-editor/page-wireless.c
	  src/connection-editor/page-wireless.h
	  src/connection-editor/ce-page-wireless.glade
		- Split wireless bits out

	* src/connection-editor/page-wireless-security.c
	  src/connection-editor/page-wireless-security.h
		- Split wireless security bits out

	* src/connection-editor/page-ip4-address.c
	  src/connection-editor/page-ip4-address.h
	  src/connection-editor/ce-page-ip4-address.glade
		- Split IPv4 address bits out

	* src/connection-editor/page-ip4.c
	  src/connection-editor/page-ip4.h
	  src/connection-editor/ce-page-ip4.glade
		- Split IPv4 DNS & search domain bits out

	* src/connection-editor/nm-connection-editor.c
	  src/connection-editor/nm-connection-editor.h
	  src/connection-editor/nm-connection-editor.glade
		- Move all the settings pages to their own sources and glade files

2008-01-26  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/nm-connection-editor.c
		- (adj_get_value_as_int): remove, use gtk_spin_button_get_value_as_int()