@@ -1,5 +1,11 @@
 2008-02-01  Dan Williams  <dcbw@redhat.com>
 
+	* src/applet-device-wireless.c
+		- (other_wireless_activate_cb, new_network_activate_cb): use
+			gtk_window_present_with_time()
+
+2008-02-01  Dan Williams  <dcbw@redhat.com>
+
 	* src/applet.c
 		- (nma_menu_add_separator_item): take a GtkWidget instead of a
 			GtkMenuShell
